fix: Embed & misc fixes - Derrive title from URL if title is unknown for website embed, ensuring it's still clickable - Fix for Stoat links not appearing if in middle of a paragraph with no linebreaks - Make internal-only Context parameters more clear for childrenToSolid - Swap voice_chat icon with call icon based on user feedback - Add more class names to elements as required for CSS rules that don't work in Panda, but now using a naming convention more compatible with #791 - Change code in SizedContent to resize the container more dynamically and be more computationally efficent - Fix attachment download button underscore on hover & hitbox being wrong (caused by wrapping a button in an anchor)

--- a/packages/client/components/ui/styles.css
+++ b/packages/client/components/ui/styles.css
@@ -23,6 +23,10 @@ body {
   bottom: env(safe-area-inset-bottom);
 }
 
+/* Consistent gap between embeds */
+.message_body .embed:not(:last-child) { margin-bottom: var(--gap-md) }
+.message_body .embed + br { display: none }
+
 /* App: Desktop view */
 .appRoot {
   display: flex;
